fixed button off-center issue

--- a/popup.css
+++ b/popup.css
@@ -115,7 +115,7 @@ body {
   #linkAccount{
     width: 150px;
     justify-content: center;
-    margin-left: 20%;
+    margin-left: 25%;
   }
 
   @font-face {
